Change file names

--- a/adopt.html
+++ b/adopt.html
@@ -29,8 +29,8 @@
         <nav tabindex="0" id="nav" role="navigation">
           <ul class="nav-wrapper list-group milli text-upper">
             <li><a href="index.html">Home</a></li>
-            <li><a href="available-rescues.html">Our Animals</a></li>
-            <li><a href="adopt-a-rescue.html">Adopt</a></li>
+            <li><a href="rescues.html">Our Animals</a></li>
+            <li><a href="adopt.html">Adopt</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </nav>
@@ -69,8 +69,8 @@
         <h3 class="kilo bold text-upper push-1-2">Site map</h3>
         <ul class="block list-group push-0">
           <li><a href="index.html">Home</a></li>
-          <li><a href="available-rescues.html">Our Animals</a></li>
-          <li><a href="adopt-a-rescue.html">Adopt</a></li>
+          <li><a href="rescues.html">Our Animals</a></li>
+          <li><a href="adopt.html">Adopt</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
