--- a/rescues.html
+++ b/rescues.html
@@ -29,8 +29,8 @@
         <nav tabindex="0" id="nav" role="navigation">
           <ul class="nav-wrapper list-group milli text-upper">
             <li><a href="index.html">Home</a></li>
-            <li><a href="available-rescues.html">Our Animals</a></li>
-            <li><a href="adopt-a-rescue.html">Adopt</a></li>
+            <li><a href="rescues.html">Our Animals</a></li>
+            <li><a href="adopt.html">Adopt</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </nav>
@@ -54,28 +54,28 @@
           <img class="img-flex pet" src="images/chihuahua-resting.jpg" alt="A chihuahua resting on a blanket">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt-a-rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Milo">Adopt Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Milo">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/dog-outside.jpg" alt="A black dog with brown eyebrows looking at the camera">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Jeep</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt-a-rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jeep">Adopt Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jeep">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/majestic-horse.jpg" alt="A horse with air-brushed hair looking at the camera">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Jack</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt-a-rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jack">Adopt Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jack">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/fluffy-cat.jpg" alt="A fluffy cat laying outside">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Kathy</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt-a-rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Kathy">Adopt Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Kathy">Adopt Me</a>
         </div>
       </div>
 
@@ -84,28 +84,28 @@
           <img class="img-flex" src="images/brown-cat.jpg" alt="A cat with big eyes looking at the camera">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Stacey</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt-a-rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Stacey">Adopt Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Stacey">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/dog-mutt.jpg" alt="A dirty dog in a pen">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Faun</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt-a-rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Faun">Adopt Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Faun">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/pink-piglet.jpg" alt="A piglet with hay on her nose">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Cassie</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt-a-rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Cassie">Adopt Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Cassie">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/goat-front.jpg" alt="A black goat with a red collar">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Nickel</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt-a-rescue.html" class="btn btn-ghost content-shrink" aria-label="Read Nickel">Adopt Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Read Nickel">Adopt Me</a>
         </div>
       </div>
     </section>
@@ -131,8 +131,8 @@
         <h3 class="kilo bold text-upper push-1-2">Site map</h3>
         <ul class="block list-group push-0">
           <li><a href="index.html">Home</a></li>
-          <li><a href="available-rescues.html">Our Animals</a></li>
-          <li><a href="adopt-a-rescue.html">Adopt</a></li>
+          <li><a href="rescues.html">Our Animals</a></li>
+          <li><a href="adopt.html">Adopt</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
