Smush images, fix indentation and make logo clickable to home

--- a/adopt.html
+++ b/adopt.html
@@ -22,7 +22,7 @@
   <header role="banner" class="max-width pad-t-1-2 pad-b-1-2">
     <div class="grid grid-bottom">
       <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 wordmark island">
-        <img src="images/wordmark.svg" alt="Big sky ranch">
+        <a href="index.html"><img src="images/wordmark.svg" alt="Big sky ranch"></a>
       </div>
 
       <div class="unit xs-1 s-1 m-1 l-3-4 xl-3-4">
