--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header role="banner" class="max-width pad-t-1-2 pad-b-1-2">
     <div class="grid grid-bottom">
       <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 wordmark island">
-        <img src="images/wordmark.svg" alt="Big sky ranch">
+        <a href="index.html"><img src="images/wordmark.svg" alt="Big sky ranch"></a>
       </div>
 
       <div class="unit xs-1 s-1 m-1 l-3-4 xl-3-4">
@@ -51,7 +51,7 @@
     <section id="about" class="max-width">
       <div class="grid grid-middle">
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 gutter-2">
-          <h2 class='red tera'>We rehabilitate abused or injured animals</h2>
+          <h2 class="red tera">We rehabilitate abused or injured animals</h2>
           <p>We take in any unwanted animal. The Sanctuary provides quality care for as many animals as our funding allows and does not put any time restriction on animals in our care.</p>
           <p class="red bold push-2">Non-profit #: 80508 6543 RROOO1</p>
         </div>
@@ -63,12 +63,12 @@
       <div class="grid grid-middle">
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 gutter-2">
           <h2 class="red tera">Our focus on behalf of animal welfare is to</h2>
-          <ol class="main-ol push-2">
+          <ol class="main-ol push-2 bold red">
             <li>
-              <p class="push-1-4">Improve relations between animals & humans</p>
+              <p class="push-1-4 not-bold">Improve relations between animals & humans</p>
             </li>
             <li>
-              <p>Educate people to a higher level of understanding when it comes to any animal-related issue</p>
+              <p class="not-bold">Educate people to a higher level of understanding when it comes to any animal-related issue</p>
             </li>
           </ol>
         </div>
@@ -83,17 +83,15 @@
     <div class="grid max-width micro pad-top gutter">
       <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 push">
         <h3 class="kilo bold text-upper push-1-2">Visit us</h3>
-        <p class="push-1-2">Big Sky Ranch Animal Sanctuary<br>
-          810 Pelton Road<br>
-          Kemptville, ON</p>
-          <ul class="list-group push-0">
-            <li>
-              <i class="icon i-24 push-r-1-4">
-                <img src="images/icon-phone.svg" alt="Call icon">
-              </i>
-              <a href="tel:613-258-7118" class="icon-label">613-258-7118</a>
-            </li>
-          </ul>
+        <p class="push-1-2">Big Sky Ranch Animal Sanctuary<br>810 Pelton Road<br>Kemptville, ON</p>
+        <ul class="list-group push-0">
+          <li>
+            <i class="icon i-24 push-r-1-4">
+              <img src="images/icon-phone.svg" alt="Call icon">
+            </i>
+            <a href="tel:613-258-7118" class="icon-label">613-258-7118</a>
+          </li>
+        </ul>
       </div>
       <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 push">
         <h3 class="kilo bold text-upper push-1-2">Site map</h3>
