--- a/rescues.html
+++ b/rescues.html
@@ -22,7 +22,7 @@
   <header role="banner" class="max-width pad-t-1-2 pad-b-1-2">
     <div class="grid grid-bottom">
       <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 wordmark island">
-        <img src="images/wordmark.svg" alt="Big sky ranch">
+        <a href="index.html"><img src="images/wordmark.svg" alt="Big sky ranch"></a>
       </div>
 
       <div class="unit xs-1 s-1 m-1 l-3-4 xl-3-4">
@@ -50,62 +50,48 @@
 
     <section id="animals">
       <div class="grid grid-stretch max-width pet-container">
-        <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex pet" src="images/chihuahua-resting.jpg" alt="A chihuahua resting on a blanket">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h3>
+          <h2 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h2>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
           <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Milo">Adopt Me</a>
         </div>
 
-        <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/dog-outside.jpg" alt="A black dog with brown eyebrows looking at the camera">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Jeep</h3>
+          <h2 class="push-1-4 giga red text-upper pad-t-1-2">Jeep</h2>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
           <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jeep">Adopt Me</a>
         </div>
 
-        <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/majestic-horse.jpg" alt="A horse with air-brushed hair looking at the camera">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Jack</h3>
+          <h2 class="push-1-4 giga red text-upper pad-t-1-2">Jack</h2>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
           <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jack">Adopt Me</a>
-        </div>
-
-        <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex" src="images/fluffy-cat.jpg" alt="A fluffy cat laying outside">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Kathy</h3>
-          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Kathy">Adopt Me</a>
         </div>
       </div>
 
       <div class="grid grid-stretch max-width pet-container">
-        <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/brown-cat.jpg" alt="A cat with big eyes looking at the camera">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Stacey</h3>
+          <h2 class="push-1-4 giga red text-upper pad-t-1-2">Stacey</h2>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
           <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Stacey">Adopt Me</a>
         </div>
 
-        <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/dog-mutt.jpg" alt="A dirty dog in a pen">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Faun</h3>
+          <h2 class="push-1-4 giga red text-upper pad-t-1-2">Faun</h2>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
           <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Faun">Adopt Me</a>
         </div>
 
-        <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/pink-piglet.jpg" alt="A piglet with hay on her nose">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Cassie</h3>
+          <h2 class="push-1-4 giga red text-upper pad-t-1-2">Cassie</h2>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
           <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Cassie">Adopt Me</a>
-        </div>
-
-        <div class="unit xs-1 s-1 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex" src="images/goat-front.jpg" alt="A black goat with a red collar">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Nickel</h3>
-          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Read Nickel">Adopt Me</a>
         </div>
       </div>
     </section>
@@ -115,17 +101,15 @@
     <div class="grid max-width micro pad-top gutter">
       <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 push">
         <h3 class="kilo bold text-upper push-1-2">Visit us</h3>
-        <p class="push-1-2">Big Sky Ranch Animal Sanctuary<br>
-          810 Pelton Road<br>
-          Kemptville, ON</p>
-          <ul class="list-group push-0">
-            <li>
-              <i class="icon i-24 push-r-1-4">
-                <img src="images/icon-phone.svg" alt="Call icon">
-              </i>
-              <a href="tel:613-258-7118" class="icon-label">613-258-7118</a>
-            </li>
-          </ul>
+        <p class="push-1-2">Big Sky Ranch Animal Sanctuary<br>810 Pelton Road<br>Kemptville, ON</p>
+        <ul class="list-group push-0">
+          <li>
+            <i class="icon i-24 push-r-1-4">
+              <img src="images/icon-phone.svg" alt="Call icon">
+            </i>
+            <a href="tel:613-258-7118" class="icon-label">613-258-7118</a>
+          </li>
+        </ul>
       </div>
       <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 push">
         <h3 class="kilo bold text-upper push-1-2">Site map</h3>
@@ -139,7 +123,7 @@
       <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 connect">
         <h3 class="kilo bold text-upper push-1-2">Stay Connected</h3>
         <a href="https://www.facebook.com/BigSkyRanchAnimalSanctuary"><img class="i-48 push-r-1-2" src="images/icon-facebook.svg" alt="Facebook link icon"></a>
-        <a href="https://twitter.com/BigSkyRanch1"><img class="i-48 push-r-1-2" src="images/icon-twitter.svg" alt="Twitter link icon"></a>
+        <a href="https://twitter.com/BigSkyRanch2"><img class="i-48 push-r-1-2" src="images/icon-twitter.svg" alt="Twitter link icon"></a>
       </div>
     </div>
   </footer>
