--- a/adopt.html
+++ b/adopt.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Big Sky Ranch - Adopt</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="apple-touch-icon" href="/favicon-196.png">
+  <link href="favicon.ico" rel="shortcut icon">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -52,18 +54,16 @@
   <footer role="contentinfo">
     <div class="grid max-width micro pad-top gutter">
       <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 push">
-        <h3 class="kilo bold text-upper push-1-2">Visit us</h3>
-        <p class="push-1-2">Big Sky Ranch Animal Sanctuary<br>
-          810 Pelton Road<br>
-          Kemptville, ON</p>
-          <ul class="list-group push-0">
-            <li>
-              <i class="icon i-24 push-r-1-4">
-                <img src="images/icon-phone.svg" alt="Call icon">
-              </i>
-              <a href="tel:613-258-7118" class="icon-label">613-258-7118</a>
-            </li>
-          </ul>
+        <h2 class="kilo bold text-upper push-1-2">Visit us</h2>
+        <p class="push-1-2">Big Sky Ranch Animal Sanctuary<br>810 Pelton Road<br>Kemptville, ON</p>
+        <ul class="list-group push-0">
+          <li>
+            <i class="icon i-24 push-r-1-4">
+              <img src="images/icon-phone.svg" alt="Call icon">
+            </i>
+            <a href="tel:613-258-7118" class="icon-label">613-258-7118</a>
+          </li>
+        </ul>
       </div>
       <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 push">
         <h3 class="kilo bold text-upper push-1-2">Site map</h3>
