Add buttons to index

--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 gutter-2">
           <h2 class="red tera">We rehabilitate abused or injured animals</h2>
           <p>We take in any unwanted animal. The Sanctuary provides quality care for as many animals as our funding allows and does not put any time restriction on animals in our care.</p>
-          <p class="red bold push-2">Non-profit #: 80508 6543 RROOO1</p>
+          <p class="red bold push">Non-profit #: 80508 6543 RROOO1</p>
+          <a href="#" class="btn btn-ghost push-2" aria-label="Learn more about our rehabiblitation of abused animals">Learn More</a>
         </div>
-        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-          <img class="img-flex clip-right" src="images/baby-goats.jpg" alt="A baby goat climbing a tree trunk">
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 embed embed-24by10">
+          <img class="img-flex clip-right embed-item" src="images/baby-goats.jpg" alt="A baby goat climbing a tree trunk">
         </div>
       </div>
 
       <div class="grid grid-middle">
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 gutter-2">
           <h2 class="red tera">Our focus on behalf of animal welfare is to</h2>
-          <ol class="main-ol push-2 bold red">
+          <ol class="main-ol push bold red">
             <li>
               <p class="push-1-4 not-bold">Improve relations between animals & humans</p>
             </li>
@@ -73,9 +74,10 @@
               <p class="not-bold">Educate people to a higher level of understanding when it comes to any animal-related issue</p>
             </li>
           </ol>
+          <a href="#" class="btn btn-ghost push-2" aria-label="Learn more about our focus">Learn More</a>
         </div>
-        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-          <img class="img-flex clip-left" src="images/horse-cowboy.jpg" alt="A man holding the reins of a horse while petting his dog">
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 embed embed-24by10">
+          <img class="img-flex clip-left embed-item" src="images/horse-cowboy.jpg" alt="A man holding the reins of a horse while petting his dog">
         </div>
       </div>
     </section>
